# likelihood

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  example.ipynb  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: code-quality.yml  create-release.yml  generate-docs.yml  jekyll-gh-pages.yml  publish-to-pypi.yml
docs/: graph.html  index.html  main.html  pipes.html
docs/graph/: graph.html  index.html  nn.html
docs/likelihood/: index.html  (+1 more)
examples/: 0_fourier_model.txt  1_fourier_model.txt  AutoClassifier with MLflow.ipynb  AutoClassifier with Optuna.ipynb  Deep_Models.ipynb  Deepl_Models.ipynb  Ensemble with AutoClassifier.ipynb  Exploring_Likelihood_Library.ipynb  Generative for Regression.ipynb  GraphNNs.ipynb  HMM.ipynb  LoRA for the AutoClassifier.ipynb  MultiArmedBandit.ipynb  Optimization_Likelihood.ipynb  OptionCritic.ipynb  RL_Agent.ipynb  Regression_Models.ipynb  SimpleImputer example.ipynb  Simulation_Models.ipynb  Variational_Autoencoder_for_the_AutoClassifier.ipynb  Workflow with Pipeline.ipynb  _OptionCritic.ipynb  ensemble_config.json  example (2).ipynb  example.ipynb  fourier_model.txt  model.txt  model_loaded.txt  pipeline_config.json  pipeline_data.parquet  reinforcement learning for the AutoClassifier.ipynb  sample_data.parquet  transfer learning for the AutoClassifier.ipynb
likelihood/: VERSION  __init__.py  __main__.py  __numeric__.py  __tools__.py  main.py  numeric_tools.py  pipes.py  regression_models.py  tools.py
likelihood_pkg/: __init__.py
src/: lib.rs
(+55 files in other folders)
